--- a/static/css/_structure.sass
+++ b/static/css/_structure.sass
@@ -10,8 +10,12 @@ html, body
 
 main
   padding: 30px
-  padding-left: 310px
+  padding-left: 280px+30px
   height: 100%
+  display: -webkit-box
+  display: -moz-box
+  display: -ms-flexbox
+  display: -webkit-flex
   display: flex
   align-items: center
   text-align: center
@@ -36,6 +40,10 @@ aside
   padding: 100px 30px 30px 30px
   background: $darkGray
   border-right: 1px dashed $gray
+  display: -webkit-box
+  display: -moz-box
+  display: -ms-flexbox
+  display: -webkit-flex
   display: flex
   align-items: center
 
